# packaging_notice

./: README.md  pyproject.toml
src/notice/: prometheusFeishu.py  send.py
