[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notice"
version = "0.0.1"
authors = [
    { name = "shensg", email = "shensg168@gmail.com" }
]
description = "message notice, feishu, qiwei, dingding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shensg/packaging_notice"
Issues = "https://github.com/shensg/packaging_notice/issues"